experimenting with objects

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
   </head>
   <body>
+    <input id="noteText" type="text" maxlength="2" pattern="[A-Ga-g]#{2}">
+    <input id="getScaleButton" onclick="getScaleButton();" type="button">
+    <input id="penta-check" type="checkbox">
+    <input id="minor-check" type="checkbox">
     <script src="index.js"></script>
   </body>
 
