--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
       </div>
        <div class="menu">
         <h1>menu</h1>
+        <select name="keys" id="key-select">
+          <option value="C">C</option>
+          <option value="D">D</option>
+          <option value="E">E</option>
+          <option value="F">F</option>
+          <option value="G">G</option>
+          <option value="A">A</option>
+          <option value="B">B</option>
+        <input type='button' value="Major" onclick="showMajor()">
+        <input type="button" value="Minor" onclick="showMinor()">
+        <input type="checkbox" id="penta-check" name="penta-check">
+        <label for="penta-check">Pentatonic</label>
+        <br>
+        <input type="button" value="Clear" onclick="clearBoard()">
       </div>
       
     </main>
